@@ -13,6 +13,7 @@
   * Rubinius support
   * Ths CSS selector engine now supports :has()
   * XML::NodeSet#filter() was added
+  * XML::Node.next= and .previous= are aliases for add_next_sibling and add_previous_sibling. GH #183
 
 * Bugfixes
 
